--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <version>9.0.29</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.3.10.Final</version>
+        </dependency>
+
     </dependencies>
 
 
